# opengl_samples

./: .gitignore  CMakeLists.txt  README.md
include/display/: Camera.h  RenderCube.hpp  RenderData.hpp  RenderRectangle.hpp  RenderRectangleUseMixedTexture.hpp  RenderRectangleUseTexture.hpp  RenderTriangle.hpp  RenderWindow.h  base_window.hpp  game_window.hpp
include/shaders/: shader.hpp
resources/shaders/: testing.fs  testing.vs  use_texture_mixed.fs
src/: main.cpp
src/display/: Camera.cpp  RenderCube.cpp  RenderData.cpp  RenderRectangle.cpp  RenderRectangleUseMixedTexture.cpp  RenderRectangleUseTexture.cpp  RenderTriangle.cpp  RenderWindow.cpp  base_window.cpp  game_window.cpp
